--- a/movie_app/src/Movie.css
+++ b/movie_app/src/Movie.css
@@ -1,16 +1,52 @@
 .card{
   
-    height: 540px;
-    width: 300px;
+    height: 350px;
+    width: 250px;
     color: black;
+    background-color: #6a8f8985;
    
     border-color: black;
     border-radius: 10px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    margin-bottom: 50px;
+    margin-top: 20px;
+    margin-left: 20px;
+    transition: 1s;
     
-  }
+    
+}
+
   .card:hover {
     box-shadow: 0 4px 8px 0 rgba(97, 79, 79, 0.22), 0 6px 20px 0 rgba(150, 120, 120, 0.119);
     transform: scale(1.03,1.03);
-  }
+}
+
+  .img{
+    height: 285px;
+    width: 250px;
+}
+.main-card{
+    height: 410px;
+    width: 300px;
+    border: 1px solid #000;
+    background-color: white;
+    margin-left: 30px;
+    padding-top: 20px;
+     margin-top: 30px;
+}
+
+.movie-page{
+    display: flex;
+    flex-wrap: wrap;
+   justify-content: space-evenly;
+}
+.main-card:hover{
+    background-color: black;
+}
+.title{
+    text-align: center;
+    font-size: medium;
+}
+.year{
+    text-align: center;
+    font-size: small;
+}
