--- a/movie_app/src/Movie.css
+++ b/movie_app/src/Movie.css
@@ -40,7 +40,7 @@
    justify-content: space-evenly;
 }
 .main-card:hover{
-    background-color: black;
+    background-color: #eebb99;
 }
 .title{
     text-align: center;
