--- a/movie_app/src/Movie.css
+++ b/movie_app/src/Movie.css
@@ -1,52 +1,56 @@
-.card{
-  
+.card {
+
     height: 350px;
     width: 250px;
     color: black;
     background-color: #6a8f8985;
-   
+
     border-color: black;
     border-radius: 10px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     margin-top: 20px;
     margin-left: 20px;
     transition: 1s;
-    
-    
+
+
 }
 
-  .card:hover {
+.card:hover {
     box-shadow: 0 4px 8px 0 rgba(97, 79, 79, 0.22), 0 6px 20px 0 rgba(150, 120, 120, 0.119);
-    transform: scale(1.03,1.03);
+    transform: scale(1.03, 1.03);
 }
 
-  .img{
+.img {
     height: 285px;
     width: 250px;
 }
-.main-card{
+
+.main-card {
     height: 410px;
     width: 300px;
     border: 1px solid #000;
     background-color: white;
     margin-left: 30px;
     padding-top: 20px;
-     margin-top: 30px;
+    margin-top: 30px;
 }
 
-.movie-page{
+.movie-page {
     display: flex;
     flex-wrap: wrap;
-   justify-content: space-evenly;
+    justify-content: space-evenly;
 }
-.main-card:hover{
+
+.main-card:hover {
     background-color: #eebb99;
 }
-.title{
+
+.title {
     text-align: center;
     font-size: medium;
 }
-.year{
+
+.year {
     text-align: center;
     font-size: small;
 }
