--- a/movie_app/src/Singlemovie.css
+++ b/movie_app/src/Singlemovie.css
@@ -1,5 +1,4 @@
-
-.loading{
+.loading {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -7,20 +6,23 @@
     font-size: 45px;
     font-weight: bolder;
 }
-.movie-card{
+
+.movie-card {
     height: 60px;
     width: 200px;
-    
+
 }
-.img{
+
+.img {
     margin-left: 20px;
     height: 297px;
     width: 230px;
-    box-shadow: 0 8px 20px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    
+    box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 
 }
-.movie-container{
+
+.movie-container {
     height: 295px;
     width: 230px;
     margin-left: 90px;
@@ -29,50 +31,59 @@
     border: 0.5px white;
     padding-left: 10px;
     padding-right: 10px;
-    box-shadow: 0 8px 20px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: white;
 }
-.movie-page{
+
+.movie-page {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-   
-    
+
+
 }
-.title{
+
+.title {
     text-align: center;
 }
-.type{
+
+.type {
     text-align: center;
 }
-.genre{
+
+.genre {
     text-align: center;
 }
-.release{
+
+.release {
     text-align: center;
 }
-.country{
+
+.country {
     text-align: center;
 }
-.rating{
+
+.rating {
     text-align: center;
 }
-.button{
-    background-color:  white; 
-  border: none;
-  color:  #4CAF50;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  border-radius: 10px;
-  padding-bottom: 2.5px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  width: 100%;
+
+.button {
+    background-color: white;
+    border: none;
+    color: #4CAF50;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 10px;
+    padding-bottom: 2.5px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    width: 100%;
 }
-.button:hover{
+
+.button:hover {
     background-color: #4CAF50;
     color: white;
 }
